# XORProcessor

./: CMakeLists.txt  fileprocessor.cpp  fileprocessor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mingw-windows.yml
.github/workflows/: main.yml
